# django-rest-cli

./: .gitignore  LICENSE  MANIFEST.in  README.md  dr_cli.py  drf_engine.py  engine.py  pyproject.toml  requirements.txt  setup.cfg  templatesInfo.md
.github/workflows/: Test.yml  lint_and_test.yml
django_rest_cli/: settings.py
django_rest_cli/engine/: __init__.py  enums.py  exceptions.py  file_api.py  paths.py  utils.py
django_rest_cli/engine/cli/: __init__.py  cli_commands.py  input_validators.py  main.py  mixins.py
django_rest_cli/engine/cli_args_parsers/: __init__.py  cli.py  crud_engine.py  mixins.py  parent.py  startapps.py  startproject.py
django_rest_cli/engine/commands/: __init__.py  add_crud.py  add_plugins.py  base.py  start_apps.py  start_project.py  validator.py
django_rest_cli/engine/plugins/: __init__.py  base.py  main.py
django_rest_cli/engine/plugins/plugin_django_environ/: generator.py
django_rest_cli/engine/templates/: serializers_template.py  url_template.py  view_template.py
django_rest_cli/engine/templates/advanced_project_template/: Dockerfile  compose.py-tpl  readme.py-tpl  requirements-dev.txt  requirements.txt  secrets.py-tpl  setup.py-tpl
django_rest_cli/engine/templates/advanced_project_template/auth/: urls.py
django_rest_cli/engine/templates/advanced_project_template/authentication/: apps.py  urls.py
django_rest_cli/engine/templates/advanced_project_template/project_name/: settings.py-tpl  urls.py-tpl
django_rest_cli/engine/templates/advanced_project_template/users/: admin.py
django_rest_cli/engine/templates/basic_project_template/: manage.py-tpl  readme.py-tpl  requirements.txt  secrets.py-tpl
django_rest_cli/engine/templates/basic_project_template/project_name/: settings.py-tpl  urls.py-tpl  wsgi.py-tpl
django_rest_cli/engine/templates/medior_project_template/: .pre-commit-config.yaml  readme.py-tpl  requirements-dev.txt  requirements.txt  secrets.py-tpl  setup.py-tpl
django_rest_cli/engine/templates/medior_project_template/project_name/: settings.py-tpl
django_rest_cli/engine/templates/project_template/: requirements.py-tpl  secrets.py-tpl
django_rest_cli/engine/templates/project_template/project_name/: asgi.py-tpl  wsgi.py-tpl
django_rest_cli/templates/project_template/: manage.py-tpl
django_rest_cli/templates/project_template/project_name/: settings.py-tpl  urls.py-tpl
drf_project_builder/core/management/: __init__.py
drf_project_builder/engine/: __init__.py
drf_project_builder/engine/commands/: startproject.py
faith/: apps.py
god/: apps.py
goo/: apps.py
love/: apps.py
mee/: apps.py
memo/: apps.py
ola/: apps.py
tests/: conftest.py
tests/test_cli/: test_input_validators.py
todo/: manage.py  secrets.py
todo/todo/: asgi.py  settings.py  urls.py  wsgi.py
user/: models.py  serializers.py  urls.py  views.py
