[metadata]
name = django-rest-cli
version = 1.0.0
author = Nyior Clement
author-email = cnyior27@gmail.com
description = Working on it
description-file = README.md
long-description = file:README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/Nyior/django-rest-cli
project-urls =
    Bug Tracker = https://github.com/Nyior/django-rest-cli/issues
    Source Code = https://github.com/Nyior/django-rest-cli
keywords =
    django
    rest
    api
    paystack
    rest-framework
    developer tool
    cli
    
license = MIT
license-file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
    Django>=2.2
    djangorestframework>=3.12.4
    requests>=2.26.0

[options.packages.find]
exclude =
    tests

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.settings
django_find_project = false
testpaths =
    tests


[tool.black]
line-length = 89
# include = '\.pyi?$'
exclude =  migrations, dist, .env


[isort]
line_length = 89
skip = migrations, .venv, dist
known_third_party = django_dynamic_fixture
known_first_party = paystack
multi_line_output = 3
include_trailing_comma = True

[flake8]
max-line-length = 89
exclude = *migrations*, dist, .venv
# ignore = E203, E266, E501, W503, F403, F401
ignore = F403, F401
max-complexity = 18
select = B,C,E,F,W,T4,B9


