[metadata]
name = dr-cli
version = 1.0.1
author = Nyior Clement
author_email = cnyior27@gmail.com
description = Scaffold your DRF projects faster⚡🚀
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/Nyior/django-rest-cli
project_urls =
    Bug Tracker = https://github.com/py-universe/django-rest-cli/issues
    Source Code = https://github.com/py-universe/django-rest-cli
keywords =
    python
    rest
    api
    rest-framework
    developer tool
    cli
   
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP


[options]
python_requires = >=3.8
packages = find:
include_package_data = true
install_requires =
    Django>=2.2
    PyInquirer>=1.0.3
    black>=22.3.0
    isort>=5.10.1
    inflect>=5.5.2
    colorama>=0.4.4
    termcolor>=1.1.0


[options.packages.find]
exclude =
    tests
    assets


[options.entry_points]
console_scripts =
   dr-cli = django_rest_cli.engine:entry_point


[tool.black]
line-length = 89
# include = '\.pyi?$'
exclude =  migrations, dist, .env


[isort]
profile = black
src_paths=isort,test


[flake8]
max-line-length = 89
exclude = *migrations*, dist, .venv
ignore = F403, F401, W503
max-complexity = 18
select = B,C,E,F,W,T4,B9


